# openwrt-autoreboot

./: .gitignore  Cargo.toml  README.md  config.toml.default
.github/workflows/: build-cross.yml  build.yml
src/: main.rs
