[package]
name = "openwrt-autoreboot"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
reqwest = { version = "0.11", features = ["json", "serde_json", "socks", "cookies"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.8"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
regex = "1.5"
clap = "3.0.0-beta.2"
serde_json = "1"